fix: improve logo visibility on navbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@ body::-webkit-scrollbar {
 
 #back {
   width: 100%;
-  height: 100vh;
+  height: 110vh;
 }
 
 #back img {
@@ -69,6 +69,7 @@ body::-webkit-scrollbar {
 }
 
 #nav img {
+  mix-blend-mode: color-burn;
   height: 100px;
 }
 
@@ -81,12 +82,12 @@ body::-webkit-scrollbar {
 
 #nav a {
   pointer-events: all;
-  color: #fff;
+  color: black;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 16px;
-  font-weight: 600;
-  letter-spacing: 1px;
+  font-size: 17px;
+  font-weight: 650;
+  letter-spacing: 2px;
 }
 
 .hamburger-btn {
@@ -101,7 +102,7 @@ body::-webkit-scrollbar {
 .line {
   width: 28px;
   height: 3px;
-  background: white;
+  background: black;
   border-radius: 3px;
   transition: 0.3s ease;
 }
@@ -186,7 +187,7 @@ body::-webkit-scrollbar {
   position: absolute;
   top: 100%;
   left: 0;
-  line-height: 0.9;
+  line-height: 0.92;
   font-family: "heavitas";
   color: #fff;
   font-weight: 100;
@@ -298,13 +299,21 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 640px) {
+  #heroleft button {
+    padding: 2vw 3vw;
+    font-size: 5vw;
+    margin-top: 5vw;
+    font-family: "heavitas";
+    background-color: #fff;
+  }
+
   #nav {
     padding: 10px 3%;
     max-width: 100vw !important;
   }
 
   #nav img {
-    height: 66px;
+    height: 90px;
     width: auto;
     object-fit: contain;
   }
